--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,5 +29,6 @@ export(populateSampleColumns)
 export(populateSiteINFO)
 export(removeDuplicates)
 export(retrieveNWISData)
+export(retrieveUnitNWISData)
 exportClasses(fluxUnit)
 import(zoo)
