--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Author: Robert M. Hirsch, Laura De Cicco
 Maintainer: Laura De Cicco <ldecicco@usgs.gov>
 Description: Collection of functions to help retrieve USGS data from either web
     services or user provided data files.
-License: This software is in the public domain because it contains materials
+License: file LICENSE
+Copyright: This software is in the public domain because it contains materials
     that originally came from the United States Geological Survey, an agency of
     the United States Department of Interior. For more information, see the
     official USGS copyright policy at
