--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,5 @@
-export(checkStartEndDate)
 export(compressData)
 export(dataOverview)
-export(dateFormatCheck)
-export(formatCheckDate)
-export(formatCheckParameterCd)
-export(formatCheckSiteNumber)
 export(getDVData)
 export(getDailyDataFromFile)
 export(getDataFromFile)
@@ -30,5 +25,11 @@ export(populateSiteINFO)
 export(removeDuplicates)
 export(retrieveNWISData)
 export(retrieveUnitNWISData)
+export(formatCheckDate)
+export(checkStartEndDate)
+export(dateFormatCheck)
+export(formatCheckParameterCd)
+export(formatCheckSiteNumber)
+exportClasses(fluxUnit)
 exportClasses(fluxUnit)
 import(zoo)
