Added functions that allow the user to get raw data from the web services.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,8 @@ Collate:
     'getStoretData.r'
     'getWQPData.r'
     'retrieveUnitNWISData.r'
+    'getRawQWData.r'
+    'processQWData.r'
 Depends:
     R (>= 2.15.0),
     zoo,
