--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getPreLoadedData)
 export(getPreLoadedSampleData)
 export(getQWData)
 export(getQWDataFromFile)
+export(getRawQWData)
 export(getSampleData)
 export(getSampleDataFromFile)
 export(getSiteFileData)
@@ -22,6 +23,7 @@ export(populateDateColumns)
 export(populateParameterINFO)
 export(populateSampleColumns)
 export(populateSiteINFO)
+export(processQWData)
 export(removeDuplicates)
 export(retrieveNWISData)
 export(retrieveUnitNWISData)
