--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,4 +27,9 @@ export(processQWData)
 export(removeDuplicates)
 export(retrieveNWISData)
 export(retrieveUnitNWISData)
+export(formatCheckDate)
+export(checkStartEndDate)
+export(dateFormatCheck)
+export(formatCheckParameterCd)
+export(formatCheckSiteNumber)
 import(zoo)
