--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(populateSiteINFO)
 export(processQWData)
 export(removeDuplicates)
 export(retrieveNWISData)
+export(retrieveNWISqwData)
 export(retrieveUnitNWISData)
 export(formatCheckDate)
 export(checkStartEndDate)
