Creating a separate function to create the URLS + encorporating into functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,13 +1,14 @@
 export(checkStartEndDate)
 export(compressData)
+export(constructNWISURL)
 export(dataOverview)
 export(dateFormatCheck)
 export(formatCheckDate)
 export(formatCheckParameterCd)
 export(formatCheckSiteNumber)
-export(getDVData)
 export(getDailyDataFromFile)
 export(getDataFromFile)
+export(getDVData)
 export(getMetaData)
 export(getParameterInfo)
 export(getPreLoadedDailyData)
