--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: dataRetrieval
+Package: dataRetrievalSNAPSHOT
 Type: Package
 Title: Retrieval functions for USGS data
-Version: 1.2.1
+Version: 1.2.2
 Date: 2012-12-31
 Author: Robert M. Hirsch, Laura De Cicco
 Maintainer: Laura De Cicco <ldecicco@usgs.gov>
@@ -50,6 +50,7 @@ Collate:
     'getRawQWData.r'
     'retrieveNWISqwData.r'
     'processQWData.r'
+    'constructNWISURL.r'
 Depends:
     R (>= 2.15.0)
 Imports:
