Added new function 'getDataAvailability' to find what parameters, stats, and period of record for an individual site.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,6 +51,7 @@ Collate:
     'retrieveNWISqwData.r'
     'processQWData.r'
     'constructNWISURL.r'
+    'getSiteFileData.r'
 Depends:
     R (>= 2.15.0)
 Imports:
