Performed build with new getDataAvailablity function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(formatCheckDate)
 export(formatCheckParameterCd)
 export(formatCheckSiteNumber)
 export(getDailyDataFromFile)
+export(getDataAvailablilty)
 export(getDataFromFile)
 export(getDVData)
 export(getMetaData)
