--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,7 +51,7 @@ Collate:
     'retrieveNWISqwData.r'
     'processQWData.r'
     'constructNWISURL.r'
-    'getSiteFileData.r'
+    'getDataAvailability.r'
 Depends:
     R (>= 2.15.0)
 Imports:
