--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,12 @@ export(dateFormatCheck)
 export(formatCheckDate)
 export(formatCheckParameterCd)
 export(formatCheckSiteNumber)
-export(getDailyDataFromFile)
-export(getDataAvailablilty)
-export(getDataFromFile)
 export(getDVData)
+export(getDailyDataFromFile)
+export(getDataAvailability)
+export(getDataFromFile)
 export(getMetaData)
+export(getMultipleParameterNames)
 export(getParameterInfo)
 export(getPreLoadedDailyData)
 export(getPreLoadedData)
