--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,10 @@ export(dateFormatCheck)
 export(formatCheckDate)
 export(formatCheckParameterCd)
 export(formatCheckSiteNumber)
+export(getDVData)
 export(getDailyDataFromFile)
 export(getDataAvailability)
 export(getDataFromFile)
-export(getDVData)
 export(getMetaData)
 export(getMultipleParameterNames)
 export(getParameterInfo)
@@ -23,7 +23,9 @@ export(getSampleData)
 export(getSampleDataFromFile)
 export(getSiteFileData)
 export(getWQPData)
+export(getWaterML1Data)
 export(mergeReport)
+export(padVariable)
 export(populateConcentrations)
 export(populateDaily)
 export(populateDateColumns)
