--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,10 @@ export(dateFormatCheck)
 export(formatCheckDate)
 export(formatCheckParameterCd)
 export(formatCheckSiteNumber)
-export(getDVData)
 export(getDailyDataFromFile)
 export(getDataAvailability)
 export(getDataFromFile)
+export(getDVData)
 export(getMetaData)
 export(getMultipleParameterNames)
 export(getParameterInfo)
@@ -19,11 +19,12 @@ export(getPreLoadedSampleData)
 export(getQWData)
 export(getQWDataFromFile)
 export(getRawQWData)
+export(getRDB1Data)
 export(getSampleData)
 export(getSampleDataFromFile)
 export(getSiteFileData)
-export(getWQPData)
 export(getWaterML1Data)
+export(getWQPData)
 export(mergeReport)
 export(padVariable)
 export(populateConcentrations)
