--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,10 @@ export(dateFormatCheck)
 export(formatCheckDate)
 export(formatCheckParameterCd)
 export(formatCheckSiteNumber)
+export(getDVData)
 export(getDailyDataFromFile)
 export(getDataAvailability)
 export(getDataFromFile)
-export(getDVData)
 export(getMetaData)
 export(getMultipleParameterNames)
 export(getParameterInfo)
@@ -18,13 +18,13 @@ export(getPreLoadedData)
 export(getPreLoadedSampleData)
 export(getQWData)
 export(getQWDataFromFile)
-export(getRawQWData)
 export(getRDB1Data)
+export(getRawQWData)
 export(getSampleData)
 export(getSampleDataFromFile)
 export(getSiteFileData)
-export(getWaterML1Data)
 export(getWQPData)
+export(getWaterML1Data)
 export(mergeReport)
 export(padVariable)
 export(populateConcentrations)
@@ -38,7 +38,6 @@ export(removeDuplicates)
 export(retrieveNWISData)
 export(retrieveNWISqwData)
 export(retrieveUnitNWISData)
-importFrom(zoo, zoo)
-importFrom(zoo, rollapply)
 import(RCurl)
 import(XML)
+import(zoo)
