--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(getQWData)
 export(getQWDataFromFile)
 export(getRDB1Data)
 export(getRawQWData)
+export(getSTORETSampleData)
 export(getSampleData)
 export(getSampleDataFromFile)
 export(getSiteFileData)
