Added a waterML2 function and rename column function. The rename columns function will check the parameter code and use SRS name to name columns.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(getSampleDataFromFile)
 export(getSiteFileData)
 export(getWQPData)
 export(getWaterML1Data)
+export(getWaterML2Data)
 export(mergeReport)
 export(padVariable)
 export(populateConcentrations)
@@ -35,6 +36,7 @@ export(populateSampleColumns)
 export(populateSiteINFO)
 export(processQWData)
 export(removeDuplicates)
+export(renameColumns)
 export(retrieveNWISData)
 export(retrieveNWISqwData)
 export(retrieveUnitNWISData)
