--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dataRetrieval
 Type: Package
-Title: Retrieval functions for USGS data
+Title: Retrieval functions for hydrologic data
 Version: 1.2.2
 Date: 2012-12-31
 Author: Robert M. Hirsch, Laura De Cicco
@@ -55,6 +55,8 @@ Collate:
     'padVariable.r'
     'getRDB1Data.r'
     'getSTORETSampleData.R'
+    'getWaterML2Data.r'
+    'renameColumns.R'
 Depends:
     R (>= 3.0)
 Imports:
