Added some functionality that requires the reshape2 package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,5 +39,6 @@ export(retrieveNWISqwData)
 export(retrieveUnitNWISData)
 import(RCurl)
 import(XML)
+import(reshape2)
 import(zoo)
 importFrom(plyr,rbind.fill.matrix)
