Added 2 new functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(getDVData)
 export(getDailyDataFromFile)
 export(getDataAvailability)
 export(getDataFromFile)
+export(getGeneralWQPData)
 export(getMetaData)
 export(getParameterInfo)
 export(getQWData)
@@ -23,6 +24,7 @@ export(getSampleData)
 export(getSampleDataFromFile)
 export(getSiteFileData)
 export(getWQPData)
+export(getWQPSites)
 export(getWaterML1Data)
 export(getWaterML2Data)
 export(mergeReport)
