Renamed raw data retrievals.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,6 @@ export(getMetaData)
 export(getParameterInfo)
 export(getQWDataFromFile)
 export(getRDB1Data)
-export(getRawQWData)
 export(getSTORETSampleData)
 export(getSampleData)
 export(getSampleDataFromFile)
@@ -37,9 +36,10 @@ export(populateSiteINFO)
 export(processQWData)
 export(removeDuplicates)
 export(renameColumns)
-export(retrieveNWISData)
+export(retrieveNWISdvData)
 export(retrieveNWISqwData)
-export(retrieveUnitNWISData)
+export(retrieveNWISunitData)
+export(retrieveWQPqwData)
 import(RCurl)
 import(XML)
 import(reshape2)
