Adding new function help file.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(getDataAvailability)
 export(getDataFromFile)
 export(getGeneralWQPData)
 export(getMetaData)
+export(getNWISSites)
 export(getParameterInfo)
 export(getQWDataFromFile)
 export(getRDB1Data)
