Added generalized getNWISData function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(getDataAvailability)
 export(getDataFromFile)
 export(getGeneralWQPData)
 export(getMetaData)
+export(getNWISData)
 export(getNWISSites)
 export(getParameterInfo)
 export(getQWDataFromFile)
