Change to dplyr.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,6 @@ export(getNWISSample)
 export(getNWISSiteInfo)
 export(getNWISSites)
 export(getParameterInfo)
-export(getQWDataFromFile)
 export(getRDB1Data)
 export(getSTORETSampleData)
 export(getSampleData)
@@ -53,4 +52,4 @@ import(RCurl)
 import(XML)
 import(reshape2)
 import(zoo)
-importFrom(plyr,rbind.fill.matrix)
+importFrom(dplyr,rbind_all)
