Changed retrieval to get.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,10 +15,14 @@ export(getMetaData)
 export(getNWISDaily)
 export(getNWISData)
 export(getNWISDataAvailability)
+export(getNWISInfo)
 export(getNWISPcodeInfo)
 export(getNWISSample)
 export(getNWISSiteInfo)
 export(getNWISSites)
+export(getNWISdvData)
+export(getNWISqwData)
+export(getNWISunitData)
 export(getParameterInfo)
 export(getRDB1Data)
 export(getSTORETSampleData)
@@ -30,6 +34,7 @@ export(getUserSample)
 export(getWQPData)
 export(getWQPSample)
 export(getWQPSites)
+export(getWQPqwData)
 export(getWaterML1Data)
 export(getWaterML2Data)
 export(mergeReport)
@@ -44,10 +49,6 @@ export(processQWData)
 export(readWQPData)
 export(removeDuplicates)
 export(renameColumns)
-export(retrieveNWISdvData)
-export(retrieveNWISqwData)
-export(retrieveNWISunitData)
-export(retrieveWQPqwData)
 import(RCurl)
 import(XML)
 import(reshape2)
