--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(getSiteFileData)
 export(getUserDaily)
 export(getUserSample)
 export(getWQPData)
+export(getWQPInfo)
 export(getWQPSample)
 export(getWQPSites)
 export(getWQPqwData)
