--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: dataRetrieval
 Type: Package
 Title: Retrieval functions for hydrologic data
 Version: 1.4.0.9000
-Date: 2014-09-22
+Date: 2014-09-26
 Author: Robert M. Hirsch, Laura De Cicco
 Maintainer: Laura De Cicco <ldecicco@usgs.gov>
 Description: Collection of functions to help retrieve USGS data from either web
@@ -20,7 +20,8 @@ Imports:
     XML,
     RCurl,
     dplyr,
-    reshape2
+    reshape2,
+    lubridate
 Suggests:
     xtable,
     EGRET,
