Added dependency function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,4 +55,5 @@ import(XML)
 import(reshape2)
 import(zoo)
 importFrom(dplyr,rbind_all)
+importFrom(lubridate,decimal_date)
 importFrom(lubridate,parse_date_time)
