Adding getUserInfo function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(getSampleData)
 export(getSampleDataFromFile)
 export(getSiteFileData)
 export(getUserDaily)
+export(getUserInfo)
 export(getUserSample)
 export(getWQPData)
 export(getWQPInfo)
