--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
 Suggests:
     xtable,
     EGRET,
-    knitr
+    knitr,
+    testthat
 LazyLoad: yes
 LazyData: yes
 VignetteBuilder: knitr
