Trying to get travis to work.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,17 @@
 
 language: c
 
-before_install:
+script: "./travis-tool.sh run_tests"
+
+before_script:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-
-install:
-  - ./travis-tool.sh install_deps
-  - ./travis-tool.sh install_github USGS-R/EGRET
-
-script: ./travis-tool.sh run_tests
+  - "./travis-tool.sh bootstrap"
+  - "./travis-tool.sh install_deps - ./travis-tool.sh install_r zoo XML RCurl dplyr reshape2 lubridate"
+  - "./travis-tool.sh install_github USGS-R/EGRET"
 
 on_failure:
-  - ./travis-tool.sh dump_logs
+  - "./travis-tool.sh dump_logs"
 
 notifications:
   email:
