--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dataRetrieval
 Type: Package
-Title: Retrieval functions for hydrologic data
+Title: Retrieval functions for USGS and EPA hydrologic and water quality data
 Version: 1.4.0
 Date: 2014-10-13
 Authors@R: c( person("Robert", "Hirsch", role = c("aut"),
