--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,23 +2,23 @@
 
 export(constructNWISURL)
 export(constructWQPURL)
-export(getNWISData)
-export(getNWISDataAvailability)
-export(getNWISPcodeInfo)
-export(getNWISSiteInfo)
-export(getNWISSites)
-export(getNWISdvData)
-export(getNWISqwData)
-export(getNWISunitData)
-export(getRDB1Data)
-export(getWQPData)
-export(getWQPSites)
-export(getWQPqwData)
-export(getWaterML1Data)
-export(getWaterML2Data)
+export(importRDB1)
+export(importWQP)
+export(importWaterML1)
+export(importWaterML2)
 export(padVariable)
-export(parseWQPData)
+export(readNWISdata)
+export(readNWISdv)
+export(readNWISpCode)
+export(readNWISqw)
+export(readNWISsite)
+export(readNWISunit)
+export(readWQPdata)
+export(readWQPqw)
 export(renameColumns)
+export(whatNWISData)
+export(whatNWISsites)
+export(whatWQPsites)
 import(RCurl)
 import(XML)
 import(reshape2)
