Changed dataRetrieval to dataRetrievaldemo

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,13 +1,13 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^\.Rproj\inst\dataRetrieval.log
-^\.Rproj\inst\dataRetrieval-concordance.tex
-^\.Rproj\inst\dataRetrieval.toc
-^\.Rproj\inst\dataRetrieval.tex
+^\.Rproj\inst\dataRetrievaldemo.log
+^\.Rproj\inst\dataRetrievaldemo-concordance.tex
+^\.Rproj\inst\dataRetrievaldemo.toc
+^\.Rproj\inst\dataRetrievaldemo.tex
 ^\.travis\.yml$
 ^\.Rproj\.gitignore
 ^\.Rproj\.RData
-^\.Rproj\dataRetrieval.Rproj
+^\.Rproj\dataRetrievaldemo.Rproj
 ^\.Rproj\.Rhistory
 ^\.Rproj\.travis.yml
 ^\.Rproj\appveyor.yml
