--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(whatNWISsites)
 export(whatWQPsites)
 import(RCurl)
 import(XML)
+import(httr)
 import(reshape2)
 importFrom(dplyr,rbind_all)
 importFrom(lubridate,parse_date_time)
