Adding peak, rating, and meas NWIS functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,11 @@ export(importWaterML2)
 export(padVariable)
 export(readNWISdata)
 export(readNWISdv)
+export(readNWISmeas)
 export(readNWISpCode)
+export(readNWISpeak)
 export(readNWISqw)
+export(readNWISrating)
 export(readNWISsite)
 export(readNWISunit)
 export(readWQPdata)
