Changed variablePad function name.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(importRDB1)
 export(importWQP)
 export(importWaterML1)
 export(importWaterML2)
-export(padVariable)
 export(readNWISdata)
 export(readNWISdv)
 export(readNWISmeas)
@@ -22,6 +21,7 @@ export(renameColumns)
 export(whatNWISData)
 export(whatNWISsites)
 export(whatWQPsites)
+export(zeroPad)
 import(RCurl)
 import(XML)
 import(httr)
