Adding WaterML2 parser back in.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,5 +26,5 @@ import(RCurl)
 import(XML)
 import(httr)
 import(reshape2)
-importFrom(dplyr,rbind_all)
 importFrom(lubridate,parse_date_time)
+importFrom(plyr,rbind.fill.matrix)
