--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(importWaterML1)
 export(importWaterML2)
 export(readNWISdata)
 export(readNWISdv)
+export(readNWISgwl)
 export(readNWISmeas)
 export(readNWISpCode)
 export(readNWISpeak)
