--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(readNWISunit)
 export(readWQPdata)
 export(readWQPqw)
 export(renameColumns)
-export(whatNWISData)
+export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPsites)
 export(zeroPad)
