Updating help files.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(readNWISpeak)
 export(readNWISqw)
 export(readNWISrating)
 export(readNWISsite)
-export(readNWISunit)
+export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(renameColumns)
@@ -26,6 +26,6 @@ export(zeroPad)
 import(RCurl)
 import(XML)
 import(httr)
+import(lubridate)
 import(reshape2)
-importFrom(lubridate,parse_date_time)
 importFrom(plyr,rbind.fill.matrix)
