Switching around column names.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ export(readNWISsite)
 export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
-export(renameColumns)
+export(renameNWISColumns)
 export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPsites)
