Switching back to non-demo.

--- a/.Rinstignore
+++ b/.Rinstignore
@@ -1,5 +1,5 @@
-inst/doc/dataRetrievaldemo-concordance.tex
-inst/doc/dataRetrievaldemo.tex
-inst/doc/dataRetrievaldemo.log
-inst/doc/dataRetrievaldemo.toc
-inst/doc/dataRetrievaldemo.synctex.gz
+inst/doc/dataRetrieval-concordance.tex
+inst/doc/dataRetrieval.tex
+inst/doc/dataRetrieval.log
+inst/doc/dataRetrieval.toc
+inst/doc/dataRetrieval.synctex.gz
