--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ install:
   ps: Bootstrap
 
 build_script:
-  - travis-tool.sh install_github USGS-R/EGRETdemo
+  - travis-tool.sh install_github USGS-R/EGRET
   - travis-tool.sh install_deps
 
 test_script:
