--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ before_script:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - "./travis-tool.sh bootstrap"
-  - "./travis-tool.sh install_deps - ./travis-tool.sh install_r zoo XML RCurl dplyr reshape2 lubridate"
-  - "./travis-tool.sh install_github USGS-R/EGRET"
+  - "./travis-tool.sh install_deps - ./travis-tool.sh install_r XML RCurl plyr reshape2 lubridate httr"
 
 on_failure:
   - "./travis-tool.sh dump_logs"
