--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,12 +16,8 @@ Description: Collection of functions to help retrieve U.S. Geological Survey
     http://waterservices.usgs.gov/ Both EPA and USGS water quality data are
     obtained from the Water Quality Portal found here:
     http://www.waterqualitydata.us/portal.jsp
-License: Unlimited | file LICENSE
-Copyright: This software is in the public domain because it contains materials
-    that originally came from the United States Geological Survey, an agency of
-    the United States Department of Interior. For more information, see the
-    official USGS copyright policy at
-    http://www.usgs.gov/visual-id/credit_usgs.html#copyright
+License: CC0
+Copyright: 
 Depends:
     R (>= 3.0)
 Imports:
@@ -39,4 +35,5 @@ LazyLoad: yes
 LazyData: yes
 VignetteBuilder: knitr
 BuildVignettes: true
-URL: https://github.com/USGS-R/dataRetrieval
+URL: https://github.com/USGS-R/dataRetrieval, http://pubs.usgs.gov/tm/04/a10/
+Copyright: This software is in the public domain because it contains materials that originally came from the United States Geological Survey, an agency of the United States Department of Interior. For more information, see the official USGS copyright policy at http://www.usgs.gov/visual-id/credit_usgs.html#copyright
