--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: dataRetrieval
 Type: Package
 Title: Retrieval Functions for USGS and EPA Hydrologic and Water Quality Data
 Version: 2.0.1.9000
-Date: 2014-10-13
+Date: 2014-11-24
 Authors@R: c( person("Robert", "Hirsch", role = c("aut"),
     email = "rhirsch@usgs.gov"),
     person("Laura", "DeCicco", role = c("aut","cre"),
@@ -17,7 +17,11 @@ Description: Collection of functions to help retrieve U.S. Geological Survey
     obtained from the Water Quality Portal found here:
     http://www.waterqualitydata.us/portal.jsp
 License: CC0
-Copyright: 
+Copyright: This software is in the public domain because it contains materials
+    that originally came from the United States Geological Survey, an agency of
+    the United States Department of Interior. For more information, see the
+    official USGS copyright policy at
+    http://www.usgs.gov/visual-id/credit_usgs.html#copyright
 Depends:
     R (>= 3.0)
 Imports:
@@ -36,4 +40,3 @@ LazyData: yes
 VignetteBuilder: knitr
 BuildVignettes: true
 URL: https://github.com/USGS-R/dataRetrieval, http://pubs.usgs.gov/tm/04/a10/
-Copyright: This software is in the public domain because it contains materials that originally came from the United States Geological Survey, an agency of the United States Department of Interior. For more information, see the official USGS copyright policy at http://www.usgs.gov/visual-id/credit_usgs.html#copyright
