Adding new function getWebServiceData to clean up error handling.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(constructNWISURL)
 export(constructWQPURL)
+export(getWebServiceData)
 export(importRDB1)
 export(importWQP)
 export(importWaterML1)
