--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ os:
 env:
    global:
      - CRAN: http://cran.rstudio.com
-#     - R_BUILD_ARGS="--no-build-vignettes --no-manual"
-     - R_CHECK_ARGS=" --as-cran"
+     - R_BUILD_ARGS="--no-build-vignettes --no-manual"
+     - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
      - BOOTSTRAP_LATEX=""
 
 script: "./travis-tool.sh run_tests"
