--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,8 @@ Authors@R: c( person("Robert", "Hirsch", role = c("aut"),
 Description: Collection of functions to help retrieve U.S. Geological Survey
     (USGS) and U.S. Environmental Protection Agency (EPA) water quality and
     hydrology data from web services. USGS web services are discovered from the
-    National Water Information Services (NWIS) tools found here:
-    http://waterservices.usgs.gov/ Both EPA and USGS water quality data are
-    obtained from the Water Quality Portal found here:
-    http://www.waterqualitydata.us/portal.jsp
+    National Water Information Services (NWIS) tools. Both EPA and USGS water 
+    quality data are obtained from the Water Quality Portal.
 License: CC0
 Copyright: This software is in the public domain because it contains materials
     that originally came from the United States Geological Survey, an agency of
