--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(importRDB1)
 export(importWQP)
 export(importWaterML1)
 export(importWaterML2)
+export(pCodeToName)
+export(parameterCdFile)
 export(readNWISdata)
 export(readNWISdv)
 export(readNWISgwl)
