--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # Sample .travis.yml for R projects from https://github.com/craigcitro/r-travis
 
-language: c
+language: r
 
 os:
   - osx
@@ -16,11 +16,12 @@ env:
 
 script: "./travis-tool.sh run_tests"
 
-before_script:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - "./travis-tool.sh bootstrap"
-  - "./travis-tool.sh install_deps - ./travis-tool.sh install_r XML RCurl plyr reshape2 lubridate httr knitr xtable testthat"
+r_packages:
+  - XML
+  - RCurl
+  - plyr
+  - reshape2
+  - lubridate
 
 after_script:
   - "./travis-tool.sh dump_logs"
