Trying to get it to fail.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script: "./travis-tool.sh run_tests"
 before_script:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
+  - R CMD options(warn=2)
 
 after_script:
   - "./travis-tool.sh dump_logs"
