Going back to c.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 # Sample .travis.yml for R projects from https://github.com/craigcitro/r-travis
 
-language: r
+language: c
+
+os:
+  - osx
+  - linux
 
 env:
    global:
@@ -10,12 +14,13 @@ env:
      - BOOTSTRAP_LATEX=""
      - NOT_CRAN="true" 
 
-before_install:
+script: "./travis-tool.sh run_tests"
+
+before_script:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
-  - Rscript -e "options(warn=2)"
-
-script: "./travis-tool.sh run_tests"
+  - "./travis-tool.sh bootstrap"
+  - "./travis-tool.sh install_deps - ./travis-tool.sh install_r XML RCurl plyr reshape2 lubridate httr knitr xtable testthat"
 
 after_script:
   - "./travis-tool.sh dump_logs"
