Adding state code lookup table.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(checkWQPdates)
 export(constructNWISURL)
 export(constructWQPURL)
+export(countyCd)
 export(getWebServiceData)
 export(importRDB1)
 export(importWQP)
@@ -23,6 +24,7 @@ export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(renameNWISColumns)
+export(stateCd)
 export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPsites)
