Added state code lookup. Fixes #102.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(readWQPdata)
 export(readWQPqw)
 export(renameNWISColumns)
 export(stateCd)
+export(stateCdLookup)
 export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPsites)
