Specifying melt/cast

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,5 +33,6 @@ export(zeroPad)
 import(RCurl)
 import(XML)
 import(lubridate)
-import(reshape2)
 importFrom(plyr,rbind.fill.matrix)
+importFrom(reshape2,dcast)
+importFrom(reshape2,melt)
