--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ export(zeroPad)
 import(RCurl)
 import(XML)
 import(lubridate)
+import(stats)
+import(utils)
 importFrom(plyr,rbind.fill.matrix)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
