--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ import(XML)
 import(lubridate)
 import(stats)
 import(utils)
+importFrom(dplyr,left_join)
 importFrom(plyr,rbind.fill.matrix)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
