New update to roxygen2.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,6 +2,7 @@ vignettes/figure
 appveyor.yml
 .travis.yml
 .gitignore
+examplePhosQuery.R
 dataRetrieval-concordance.tex
 ^.*\.Rproj$
 ^\.Rproj\.user$
