--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Authors@R: c( person("Robert", "Hirsch", role = c("aut"),
 Description: Collection of functions to help retrieve U.S. Geological Survey
     (USGS) and U.S. Environmental Protection Agency (EPA) water quality and
     hydrology data from web services. USGS web services are discovered from the
-    National Water Information System (NWIS) tools. Both EPA and USGS water 
+    National Water Information System (NWIS) tools. Both EPA and USGS water
     quality data are obtained from the Water Quality Portal.
 License: CC0
 Copyright: This software is in the public domain because it contains materials
@@ -39,3 +39,4 @@ VignetteBuilder: knitr
 BuildVignettes: true
 BugReports: https://github.com/USGS-R/dataRetrieval/issues
 URL: https://github.com/USGS-R/dataRetrieval, http://pubs.usgs.gov/tm/04/a10/
+RoxygenNote: 5.0.0
