straw dog for access pattern

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(renameNWISColumns)
+export(setAccess)
 export(stateCd)
 export(stateCdLookup)
 export(whatNWISdata)
