--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,10 +33,13 @@ export(whatWQPsites)
 export(zeroPad)
 import(RCurl)
 import(XML)
+import(data.table)
 import(lubridate)
 import(stats)
 import(utils)
 importFrom(dplyr,left_join)
+importFrom(lubridate,fast_strptime)
+importFrom(lubridate,parse_date_time)
 importFrom(plyr,rbind.fill.matrix)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
