--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,13 +33,17 @@ export(whatWQPsites)
 export(zeroPad)
 import(RCurl)
 import(XML)
-import(data.table)
-import(lubridate)
 import(stats)
 import(utils)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate_)
+importFrom(dplyr,mutate_each_)
+importFrom(dplyr,select_)
 importFrom(lubridate,fast_strptime)
 importFrom(lubridate,parse_date_time)
 importFrom(plyr,rbind.fill.matrix)
+importFrom(readr,col_character)
+importFrom(readr,cols)
+importFrom(readr,read_delim)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
