Catching some test bugs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,5 +45,6 @@ importFrom(plyr,rbind.fill.matrix)
 importFrom(readr,col_character)
 importFrom(readr,cols)
 importFrom(readr,read_delim)
+importFrom(readr,read_lines)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
