--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ importFrom(lubridate,parse_date_time)
 importFrom(plyr,rbind.fill.matrix)
 importFrom(readr,col_character)
 importFrom(readr,cols)
+importFrom(readr,parse_number)
+importFrom(readr,problems)
 importFrom(readr,read_delim)
 importFrom(readr,read_lines)
 importFrom(reshape2,dcast)
