More ways to deal with int/site bug.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(lubridate,fast_strptime)
 importFrom(lubridate,parse_date_time)
 importFrom(plyr,rbind.fill.matrix)
 importFrom(readr,col_character)
+importFrom(readr,col_number)
 importFrom(readr,cols)
 importFrom(readr,parse_number)
 importFrom(readr,problems)
