Cleaning up imports to importsFrom.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,10 +31,21 @@ export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPsites)
 export(zeroPad)
-import(RCurl)
-import(XML)
 import(stats)
 import(utils)
+importFrom(RCurl,basicHeaderGatherer)
+importFrom(RCurl,getURI)
+importFrom(XML,xmlAttrs)
+importFrom(XML,xmlDoc)
+importFrom(XML,xmlName)
+importFrom(XML,xmlNamespaceDefinitions)
+importFrom(XML,xmlRoot)
+importFrom(XML,xmlSize)
+importFrom(XML,xmlToList)
+importFrom(XML,xmlTreeParse)
+importFrom(XML,xmlValue)
+importFrom(XML,xpathApply)
+importFrom(XML,xpathSApply)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,mutate_each_)
