Switch from RCurl to httr.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,6 @@ export(whatWQPsites)
 export(zeroPad)
 import(stats)
 import(utils)
-importFrom(RCurl,basicHeaderGatherer)
-importFrom(RCurl,getURI)
 importFrom(XML,xmlAttrs)
 importFrom(XML,xmlDoc)
 importFrom(XML,xmlName)
@@ -50,6 +48,12 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,mutate_each_)
 importFrom(dplyr,select_)
+importFrom(httr,GET)
+importFrom(httr,content)
+importFrom(httr,headers)
+importFrom(httr,status_code)
+importFrom(httr,stop_for_status)
+importFrom(httr,user_agent)
 importFrom(lubridate,fast_strptime)
 importFrom(lubridate,parse_date_time)
 importFrom(plyr,rbind.fill.matrix)
