--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(zeroPad)
 import(stats)
 import(utils)
 importFrom(RCurl,basicHeaderGatherer)
+importFrom(RCurl,curlOptions)
 importFrom(RCurl,getBinaryURL)
 importFrom(RCurl,getURI)
 importFrom(XML,xmlAttrs)
