--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ import(stats)
 import(utils)
 importFrom(RCurl,basicHeaderGatherer)
 importFrom(RCurl,curlOptions)
+importFrom(RCurl,curlVersion)
 importFrom(RCurl,getBinaryURL)
 importFrom(RCurl,getURI)
 importFrom(XML,xmlAttrs)
