Add option to find out access.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ Authors@R: c( person("Robert", "Hirsch", role = c("aut"),
     person("Laura", "DeCicco", role = c("aut","cre"),
     email = "ldecicco@usgs.gov"),
     person("David","Lorenz", role=c("aut"),
-    email = "lorenz@usgs.gov"))
+    email = "lorenz@usgs.gov"),
+    person("Jordan", "Read", role = c("ctb"),
+    email = "jread@usgs.gov"))
 Description: Collection of functions to help retrieve U.S. Geological Survey
     (USGS) and U.S. Environmental Protection Agency (EPA) water quality and
     hydrology data from web services. USGS web services are discovered from the
