Remove plyr dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,10 +52,10 @@ importFrom(XML,xpathSApply)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,mutate_each_)
+importFrom(dplyr,rbind_all)
 importFrom(dplyr,select_)
 importFrom(lubridate,fast_strptime)
 importFrom(lubridate,parse_date_time)
-importFrom(plyr,rbind.fill.matrix)
 importFrom(readr,col_character)
 importFrom(readr,col_number)
 importFrom(readr,cols)
