--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,11 +33,6 @@ export(whatWQPsites)
 export(zeroPad)
 import(stats)
 import(utils)
-importFrom(RCurl,basicHeaderGatherer)
-importFrom(RCurl,curlOptions)
-importFrom(RCurl,curlVersion)
-importFrom(RCurl,getBinaryURL)
-importFrom(RCurl,getURI)
 importFrom(XML,xmlAttrs)
 importFrom(XML,xmlDoc)
 importFrom(XML,xmlName)
@@ -49,11 +44,21 @@ importFrom(XML,xmlTreeParse)
 importFrom(XML,xmlValue)
 importFrom(XML,xpathApply)
 importFrom(XML,xpathSApply)
+importFrom(curl,curl_version)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,mutate_each_)
 importFrom(dplyr,rbind_all)
 importFrom(dplyr,select_)
+importFrom(httr,GET)
+importFrom(httr,content)
+importFrom(httr,headers)
+importFrom(httr,progress)
+importFrom(httr,status_code)
+importFrom(httr,stop_for_status)
+importFrom(httr,user_agent)
+importFrom(httr,verbose)
+importFrom(httr,write_disk)
 importFrom(lubridate,fast_strptime)
 importFrom(lubridate,parse_date_time)
 importFrom(readr,col_character)
