Getting checks to pass for realz

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(XML,xmlAttrs)
 importFrom(XML,xmlDoc)
 importFrom(XML,xmlName)
 importFrom(XML,xmlNamespaceDefinitions)
+importFrom(XML,xmlParse)
 importFrom(XML,xmlRoot)
 importFrom(XML,xmlSize)
 importFrom(XML,xmlToList)
