More attempts to speed things up.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(XML,xmlValue)
 importFrom(XML,xpathApply)
 importFrom(XML,xpathSApply)
 importFrom(curl,curl_version)
+importFrom(dplyr,full_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,mutate_each_)
