--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dataRetrieval
 Type: Package
 Title: Retrieval Functions for USGS and EPA Hydrologic and Water Quality Data
-Version: 2.5.0
-Date: 2016-02-24
+Version: 2.5.1
+Date: 2016-02-26
 Authors@R: c( person("Robert", "Hirsch", role = c("aut"),
     email = "rhirsch@usgs.gov"),
     person("Laura", "DeCicco", role = c("aut","cre"),
@@ -35,7 +35,7 @@ Imports:
     stats,
     utils,
     dplyr,
-    readr
+    readr (>= 0.1.1.9000)
 Suggests:
     xtable,
     knitr,
