--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(dplyr,mutate_each_)
 importFrom(dplyr,rbind_all)
 importFrom(dplyr,select_)
 importFrom(httr,GET)
+importFrom(httr,HEAD)
 importFrom(httr,content)
 importFrom(httr,headers)
 importFrom(httr,status_code)
